# pclmatcher_pyversion

./: README.md  mycsf.py  rm25_points.yaml
PCLMatcher/: pcl_matcher.py
demo/: try.py
demo/config/: main_config.yaml
demo/myCSF/: mycsf.py
demo/src/: Capture.py  euclideancluster.py  fasteuclideancluster.py  get_initial_pose.py  pclmatcher.py
pcl_MATCHER/: CMakeLists.txt  main.py  package.xml  pcl_matcher.launch  rm2025.rviz
